# course_work_beta

./: .env  pyproject.toml  settings.py
data/: operations.xls  user_settings.json
src/: log.py  main.py  probe.py  probe2.py  read_operations.py  reports.py  services.py  utils.py  views.py
tests/: my_data.json  test_operations.xls  test_services.py  test_utils.py  test_views.py  tests_reports.py
