[tool.poetry]
name = "course-work-beta"
version = "0.1.0"
description = ""
authors = ["ArtemSermyagin <artem.sermyagin@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.3"
python-dotenv = "^1.0.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
